# downsonic

./: .gitignore  README.md  pyproject.toml
src/downsonic/: main.py
